# parser_django

./: README.md  db.sqlite3  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_about_us.py  0003_contacts.py  0004_contacts_name_contacts_work.py  0005_remove_about_us_image_about_us_text.py  0006_about_us_text2.py  0007_rename_text_about_us_textssssssss.py  0008_firma.py
clothing/: admin.py  forms.py  models.py  urls.py  views.py
clothing/migrations/: 0001_initial.py  0002_manclothing_description.py
custom_users/: forms.py  models.py  urls.py  views.py
custom_users/migrations/: 0001_initial.py
fastfood/: admin.py  forms.py  models.py  urls.py  views.py
fastfood/migrations/: 0001_initial.py  0002_order_quatity_food.py
main/: settings.py  urls.py
parser/: admin.py  forms.py  models.py  parser.py  urls.py  views.py
parser/migrations/: 0001_initial.py  0002_tvparser_title_text.py
static/css/: style.css  style2.css  style_for_tv.css  style_post.css
templates/: about.html  add_cl.html  add_fastfood.html  add_tv_show.html  cl.html  contacts.html  fasfood.html  film_list.html  firma.html  login.html  parser_film.html  post.html  registration.html  tvshow.html  tvshow_detail.html  tvshow_update.html  user_list.html
tvshow/: admin.py  forms.py  models.py  urls.py  views.py
tvshow/migrations/: 0001_initial.py  0002_commenttvshow.py
