[tool.poetry]
name = "inai-django"
version = "0.1.0"
description = ""
authors = ["hydroxygenium <orenvady@gmail.com>"]
readme = "README.md"
packages = [{include = "inai_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
Pillow = "^9.3.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
